Added Goals Setting Page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="https://www.healthhub.sg/_layouts/15/HealthHub_UX2.0/images/homepage/HealthHubLogo.svg" alt="logo_1">
     <h1>Stroke Risk Calculator</h1>
     <form>
       <label for="age">Age:</label>
