--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Stroke Risk Calculator</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <img src="https://www.healthhub.sg/_layouts/15/HealthHub_UX2.0/images/homepage/HealthHubLogo.svg" alt="logo_1">
-    <h1>Stroke Risk Calculator</h1>
-    <form>
-      <label for="age">Age:</label>
-      <input type="number" id="age" name="age" required><br>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stroke Risk Calculator</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/9e1b8ab9ab.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <img src="https://www.healthhub.sg/_layouts/15/HealthHub_UX2.0/images/homepage/HealthHubLogo.svg" alt="logo_1">
+  <h1>Stroke Risk Calculator <span class="fa-solid fa-gear"></span></h1>
+  <form>
+    <label for="age">Age: <span class="fa-solid fa-volume-low"></span></label>
+    <input type="number" id="age" name="age" required><br>
 
-      <label for="gender">Gender:</label>
-      <select id="gender" name="gender" required>
-        <option value="">--Select--</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-      </select><br>
+    <label for="gender">Gender: <span class="fa-solid fa-volume-low"></span></label>
+    
+    <select id="gender" name="gender" required>
+      <option value="">--Select--</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select><br>
 
-      <label for="smoker">Smoker:</label>
-      <select id="smoker" name="smoker" required>
-        <option value="">--Select--</option>
-        <option value="yes">Yes</option>
-        <option value="no">No</option>
-      </select><br>
+    <label for="smoker">Smoker: <span class="fa-solid fa-volume-low"></span></label>
+    <select id="smoker" name="smoker" required>
+      <option value="">--Select--</option>
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select><br>
 
-      <label for="sbp">Systolic Blood Pressure:</label>
-      <input type="number" id="sbp" name="sbp" required><br>
+    <label for="sbp">Systolic Blood Pressure: <span class="fa-solid fa-volume-low"></span></label>
+    <input type="number" id="sbp" name="sbp" required><br>
 
-      <label for="medication">Medication:</label>
-      <select id="medication" name="medication" required>
-        <option value="">--Select--</option>
-        <option value="yes">Yes</option>
-        <option value="no">No</option>
-      </select><br>
+    <label for="medication">Medication: <span class="fa-solid fa-volume-low"></span></label>
+    <select id="medication" name="medication" required>
+      <option value="">--Select--</option>
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select><br>
 
-      <label for="tc">Total Cholestrol:</label>
-      <input type="number" id="tc" name="tc" required><br>
+    <label for="tc">Total Cholestrol: <span class="fa-solid fa-volume-low"></span></label>
+    <input type="number" id="tc" name="tc" required><br>
 
-      <label for="hdl">HDL:</label>
-      <input type="number" id="hdl" name="hdl" required><br>
+    <label for="hdl">HDL: <span class="fa-solid fa-volume-low"></span></label>
+    <input type="number" id="hdl" name="hdl" required><br>
 
-      <button type="button" onclick="calculateRiskScore()">Calculate</button>
-    </form>
-    <!-- <div id="result" class="hidden">
-      <h2>Stroke Risk Calculator Results</h2>
-      <p>You are at <span id="risk-level"></span>.</p>
-      <button type="button" onclick="reset()">Calculate Again</button>
-    </div> -->
-    <script src="app.js"></script>
-  </body>
+    <button type="button" onclick="calculateRiskScore()">Calculate</button>
+  </form>
+  <script src="app.js"></script>
+</body>
 </html>
