--- a/results.html
+++ b/results.html
@@ -16,7 +16,7 @@
       <button id="talk-button" onclick="peopleToTalkTo()">People to Talk To</button>
       <button id="goal-button" onclick="goalSetting()">Goal Setting</button>
     </div>
-    <button class="back-button" onclick="window.history.back()">Back to Calculator</button>
+    <button class="back-button" onclick="returnToCalculator()">Back to Calculator</button>
     <p id="info-str">For more information, visit <a href="https://www.healthhub.sg/programmes/130/strokehub">Strokehub</a> and <a href="https://www.healthhub.sg/a-z/diseases-and-conditions/673/stroke-emergency"> How to spot stroke & What to do</a> when stroke happens.</p>
   </body>
   <script src="results.js"></script>
